# pyetnic

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  debug.py  extrait_profs.py  plan.md  print_doc2.py  print_doc3.py  pyproject.toml  requirements.txt  setup.py  test__lire_doc2.py  test__lire_doc3.py  test__lister_formations.py  test_pyetnic.py
.claude/: AGENTS.md  CLAUDE.md  SEPS_CONTEXT_CLAUDE_CODE.md
.github/workflows/: publish-pypi.yml  tests.yml
docs/: AUDIT.md  BACKWARDS_COMPAT.md  PUBLIC_API_SURFACE.md  SPEC.md
examples/: README.md  extrait_profs.py  test__lister_formations.py  test_pyetnic.py
pyetnic/: __init__.py  __main__.py  cli.py  config.py  error_mode.py  exceptions.py  log_config.py  nomenclatures.py  services.py  soap_client.py
pyetnic/eprom/: __init__.py
pyetnic/resources/: Codes_Pays.xls  EpromFormationDocument1Service_external_v1.wsdl  EpromFormationDocument2Service_external_v1.wsdl  EpromFormationDocument3Service_external_v1.wsdl  EpromFormationOrganisationService_external_v6.wsdl
pyetnic/seps/: __init__.py
pyetnic/services/: __init__.py  _helpers.py  document1.py  document2.py  document3.py  enregistrer_etudiant.py  formations_liste.py  inscriptions.py  models.py  nomenclatures.py  organisation.py  seps.py
tests/: test_formation_document1.py  test_formation_document2.py  test_formation_document3.py  test_formation_organisation.py  test_formations_liste.py
tests/regression/: conftest.py  test_cache_invalidation.py  test_call_service_errors.py  test_config.py  test_exceptions.py  test_public_api_eprom.py  (+4 more)
(+72 files in other folders)
